# LightRAG

./: .gitignore  pyproject.toml  requirements.txt
examples/: custom_kg_indexer.py  lightrag_ollama_demo.py  lightrag_ollama_neo4j_milvus_mongo_demo.py  test.py  test_gemini_2.py  test_ollama_deepseek-r1.py  test_ollama_mistral.py
examples/gemini_dickens/: kv_store_doc_status.json
examples/oai_dickens/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_relationships.json
examples/olm_ds-r1_dickens/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_llm_response_cache.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
examples/olm_mistral_dickens/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_llm_response_cache.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
lightrag/llm/: __init__.py  gemini.py
notebooks/: modelfile_gemma2_9b  test_run.ipynb
